<resources>
    <string name="app_name">TRIAGE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu">TRIAGE MANCHESTER SYSTEM</string>
    <string name="name_user">Usuario: </string>
    <string name="hint_user">Usuario</string>
    <string name="user_pass">Contraseña: </string>

    <!--Crud Registro Usuarios-->
    <string name="hint_user_register">Registro de usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_names">Nombre</string>
    <string name="hint_last_name">Apellido paterno</string>
    <string name="hint_last_namem">Apellido materno</string>
    <string name="user_name">Nombre de usuario</string>


    <!--Pantalla de Signos Vitales-->
    <string name="title_vital_signs">Signos vitales</string>
    <string name="fc">FC</string>
    <string name="x_min">x min.</string>
    <string name="fr">FR</string>
    <string name="temperature">Temperatura</string>
    <string name="degress_celsius">ºC</string>
    <string name="ta_systolic">TA. Sistólica</string>
    <string name="mm_hg">mm/hg.</string>
    <string name="ta_diastolic">TA. Diastólica</string>
    <string name="glasgow_neurological_states">Estados neurológicos GLASGOW</string>
    <string name="ocular_opening">Apertura ocular</string>
    <string name="verbal_response">Respuesta verbal</string>
    <string name="motor_response">Respuesta motora</string>
    <string name="total">Total</string>

    <!--Pantalla de Reportes-->
    <string name="patient_reports">Reportes de pacientes</string>

    <!--Pantalla de Historial-->
    <string name="patient_history">Historial de pacientes</string>

    <!--Pantalla Ficha de Ingreso-->
    <string name="income_card">Ficha de Ingreso</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="last_name_m">Apellido Materno</string>
    <string name="curp">CURP</string>
    <string name="sex">Sexo</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="birthdate">Fecha Nacimiento DD/MM/AAAA</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="age">Edad</string>
    <string name="hint_age">25</string>
    <string name="security_number">Número de seguro</string>
    <string name="blood_type">T. Sangre</string>
    <string name="allergy">Alergia</string>
    <string name="nameAllergy">Nombre de la Alergia</string>
    <string name="specify">Especifique</string>
    <string name="home">Domicilio</string>
    <string name="state">Estado</string>
    <string name="municipality">Municipio</string>
    <string name="colony">Colonia</string>
    <string name="street">Calle</string>
    <string name="number">Numero</string>
    <string name="numberDom">Numero Domicilio</string>
    <string name="phone">Teléfono</string>

    <!--Escala Dolor-->

    <string name="painScale">Escala de Dolor</string>
    <string name="levelOfPain">Nivel de Dolor</string>
    <string name="discomfortOfPain">Malestar de Dolor</string>

    <!--Menu-->
    <string name="income_tab">Ficha ingreso</string>
    <string name="show_record">Ver historial</string>
    <string name="reports">Reportes</string>
    <string name="users">Usuarios</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="administration">Administración</string>
    <string name="video">Video TRIAGE</string>
    <string name="report">Reporte</string>
    <string name="list_user">Lista de usuarios</string>
    <string name="list_legend">Lista de leyendas</string>
    <string name="list_level">Lista de niveles</string>
    <string name="list_disease">Lista de enfermedades</string>
    <string name="waiting_patients">Pacientes en espera</string>

    <!-- Administracion-->
    <string name="disease">Enfermedades</string>
    <string name="symptom">Síntomas</string>
    <string name="sympto">Síntoma</string>
    <string name="level">Niveles</string>
    <string name="legends">Leyendas</string>

    <!--Botones-->
    <string name="buton_enter">INGRESAR</string>
    <string name="buton_save">GUARDAR</string>
    <string name="buton_next">SIGUIENTE</string>

    <!--Enfermedades-->
    <string name="search">Buscar enfermedad</string>
    <string name="diseas">Enfermedad</string>
    <string name="add_diseas">Agregar enfermedad</string>
    <string name="update_delete_diseas">Actualizar/eliminar enfermedad</string>

    <!--Video-->
    <string name="triage_video">Triage Manchester System</string>

    <!-- String de la pantalla de administración de usuarios-->
    <string name="screen_name">Lista de usuarios</string>
    <string name="user">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_save">GUARDAR</string>
    <string name="btn_delete">ELIMINAR</string>
    <string name="btn_update">ACTUALIZAR</string>
    <string name="add_user">Agregar usuario</string>
    <string name="delete_update_user">Actualizar/eliminar usuario</string>
    <string name="search2">Buscar</string>
    <string name="add">Agregar</string>
    <string name="id">Id usuario</string>

    <!--STRING DE LA PANTALLA LEYENDA-->
    <string name="screen_name_legend">Lista leyendas</string>
    <string name="delete_update_legend">Actualizar/eliminar leyenda</string>
    <string name="name_legend">Nombre</string>
    <string name="description">Descripción</string>
    <string name="add_legend">Agregar leyenda</string>


    <!-- String pantalla niveles-->
    <string name="id_level">Id nivel</string>
    <string name="level_number">Nivel</string>
    <string name="level_description">Descripción</string>

    <!-- String lista-->
    <string name="screen_name_level">Lista niveles</string>
    <string name="add_level">Agregar nivel</string>
    <string name="delete_update_level">Actualizar/eliminar nivel</string>


    <!-- String Reporte-->
    <string name="reportGenerate">Generar Reporte</string>
    !-- String Login-->
    <string name="userLogin">USUARIO</string>
    <string name="passLogin">PASSWORD</string>
    <string name="enter">INGRESAR</string>


    <!-- String de la lista enfermedades-->
    <string name="screen_name_disease">Lista enfermedades</string>

    <!-- String lista pacientes en espera-->
    <string name="screen_name_patient_wait">Pacientes en espera</string>
    <string name="user_online">Usuarios en línea</string>

    <string name="atender">Atender</string>
    <string name="developed_by">Aplicación desarrollada por:</string>
    <string name="team_the_best">The Bests</string>
    <string name="members">Integrantes:</string>
    <string name="member_one">Castillo Antunes Kevin</string>
    <string name="member_two">Isidro Suarez Naiky Yunetsy</string>
    <string name="member_three">Mendiola Gutiérrez Juan Luis</string>
    <string name="member_four">Ramírez Ibarra Juan Pablo</string>
    <string name="about">Acerca de</string>
    <string name="users_online">Usuarios en linea</string>
    <string name="show_book">Ver libro MTS</string>
    <string name="clasification_level">Clasificación de niveles</string>
    <string name="list_symptom">Lista sintomas</string>

    <string name="credits">Créditos:</string>
    <string name="utng">Universidad Tecnológica del Norte de Guanajuato</string>
    <string name="hospital">Hospital General de Dolores Hidalgo</string>
    <string name="version">Versión 1.0</string>

    <!--Busqueda-->
    <string name="searchDisease">Motivo de consulta</string>
    <string name="reasonforconsultion">¿Cuál es el motivo de la consulta?</string>
    <string name="reasonforconsultionDos">¿Cuál es el síntoma que presenta?</string>

    <!--splash-->
    <string name="welcomes">Bienvenido</string>

    <!--Historial-->
    <string name="patientHistory">Historial de pacientes</string>
    <!--Historial-->
    <string name="list_diseases">Lista de enfermedades</string>

    <!--Escala de Dolor-->
    <string name="escalon0">No hay dolor</string>
    <string name="escalon1">Actividades normales</string>
    <string name="escalon3">Algunos problemas hace casi todo</string>
    <string name="escalon4">Ligero punzante</string>
    <string name="escalon5">Bastante malo moderado</string>
    <string name="escalon6">Causa dificultades deja de hacer algunas cosas</string>
    <string name="escalon7">Muy malo severo</string>
    <string name="escalon8">Inhabilitante detiene las actividades normales</string>
    <string name="escalon9">Abrumador el peor de su vida</string>
    <string name="escalon10">Sin control</string>

    <string name="str_red">Rojo --> Con prioridad inmediata</string>
    <string name="str_orange">Naranja --> Con prioridad muy urgente</string>
    <string name="str_yellow">Amarillo --> Con prioridad urgente</string>
    <string name="str_green">Verde --> Con prioridad estándar</string>
    <string name="str_blue">Azul --> Con prioridad no urgente</string>

    <string name="str_red_righ_now">Tiempo de atención \n Inmediato.</string>
    <string name="str_red_a">a. Paciente de urgencia  \n vital o con riesgo \n vital evidente.</string>
    <string name="str_red_b">b. Tiempo de atención \n por médico y enfermera \n inmediato.</string>

    <string name="str_orange_emergency">Tiempo de atención \n 7 minutos</string>
    <string name="str_orange_a">a. Paciente emergente o \n con riesgo vital.</string>
    <string name="str_orange_b">b. Tiempo de atención por \n enfermera inmediato y \n médico en 15 minutos.</string>

    <string name="str_yellow_urgent">Tiempo de atención \n 30 minutos.</string>
    <string name="str_yellow_a">a. Paciente urgente.</string>
    <string name="str_yellow_b">b. Tiempo de atención por \n médico y enfermera en \n menos de 60 minutos.</string>

    <string name="str_green_less_urgent">Tiempo de atención \n 45 minutos.</string>
    <string name="str_green_a">a. Paciente menos urgente</string>
    <string name="str_green_b">b. Tiempo de atención por \n médico y enfermera en \n 120 minutos.</string>

    <string name="str_blue_no_urgent">Tiempo de atención \n 60 minutos.</string>
    <string name="str_blue_a">a. Paciente no urgente.</string>
    <string name="str_blue_b">b. Tiempo de atención por \n médico y enfermera en \n 240 minutos.</string>

    <string name="yellow">Amarillo</string>
    <string name="red">Rojo</string>
    <string name="blue">Azul</string>
    <string name="orange">Naranja</string>
    <string name="great">Verde</string>
    <string name="waiting_moment">Espere un momento...</string>
    <string name="error">Usuario y/o Contraseña Incorrectos</string>
    <string name="enter_user">Falta ingresar el usuario</string>
    <string name="enter_password">Falta ingresar la constraseña</string>
    <string name="observations">Observaciones</string>

    <string name="enter_text">Texto de entrada</string>
    <string name="add_symptom">Agregar sintoma</string>
    <string name="update_delete_symptom">Eliminar/actualizar sintoma</string>

    <string name="str_you_know">Sabías que...</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="emergencylevel">Nivel de Urgencias</string>
    <string name="btn_sig">SIGUIENTE</string>

</resources>
