<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.hospital.user.UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:id="@+id/txtInfo"
                android:typeface="serif"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtIDUser"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/id"
                android:background="@drawable/rounded_editext_form"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtNameUser"
                android:background="@drawable/rounded_editext_form"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtLastNameUser"
                android:background="@drawable/rounded_editext_form"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_m"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtSecondLastNameUser"
                android:background="@drawable/rounded_editext_form"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/curp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtCURP"
                android:background="@drawable/rounded_editext_form"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtUser"
                android:background="@drawable/rounded_editext_form"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/edtPasswordUser"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_editext_form"
                android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_save"
                android:textColorHint="@color/white"
                android:id="@+id/btnSaveUser"
                android:background="@drawable/rounded_button_save"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_update"
                android:textColorHint="@color/white"
                android:id="@+id/btnUpdateUser"
                android:background="@drawable/rounded_button_update"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_delete"
                android:id="@+id/btnDeleteUser"
                android:textColorHint="@color/white"
                android:background="@drawable/rounded_button_delete"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
          </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>